@@ -1,3 +1,4 @@
+* refresh epoch, throttle, and leap cleanup from Dave Mills.
 * Documentation cleanup from Dave Mills.
 * [Bug 918] Only use a native md5.h if MD5Init() is available.
 * [Bug 979] Provide ntptimeval if it is not otherwise present.
